Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2934

Bad merge behavior for some metrics

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 1.11.0
    • 1.11.0
    • metrics
    • None

    Description

      We added a feature to merge metrics by commit fe6e5cc0c9c1573de174d1ce7838b449373ae36e ([metrics] Merge metrics by the same attribute), for AtomicGauge type metrics, we sum up of merged metrics, this work for almost all of metrics in Kudu.

      But I found a metric that could not be merged like this simply, i.e. "average_diskrowset_height", because it's a "average" value.

      Attachments

        Activity

          People

            zhangyifan27 YifanZhang
            acelyc111 Yingchun Lai
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: