src/kudu/util/metrics.h
@@ -340,6 +340,7 @@ class CounterPrototype;
 class Histogram;
 class HistogramPrototype;
 class HistogramSnapshotPB;
+class MeanGauge;
 class Metric;
 class MetricEntity;
 class MetricEntityPrototype;
@@ -616,6 +617,8 @@ class MetricEntity : public RefCountedThreadSafe<MetricEntity> {
   template<typename T>
   scoped_refptr<AtomicGauge<T> > FindOrCreateGauge(const GaugePrototype<T>* proto,
                                                    const T& initial_value);
+
+  scoped_refptr<MeanGauge> FindOrCreateMeanGauge(const GaugePrototype<double>* proto);
 
   template<typename T>
   scoped_refptr<FunctionGauge<T> > FindOrCreateFunctionGauge(const GaugePrototype<T>* proto,
@@ -895,6 +898,11 @@ class GaugePrototype : public MetricPrototype {
     return entity->FindOrCreateGauge(this, initial_value);
   }
 
+  scoped_refptr<MeanGauge> InstantiateMeanGauge(
+      const scoped_refptr<MetricEntity>& entity) const {
+    return entity->FindOrCreateMeanGauge(this);
+  }
+
   // Instantiate a gauge that is backed by the given callback.
   scoped_refptr<FunctionGauge<T> > InstantiateFunctionGauge(
       const scoped_refptr<MetricEntity>& entity,
@@ -965,6 +973,33 @@ class StringGauge : public Gauge {
   std::unordered_set<std::string> unique_values_;
   mutable simple_spinlock lock_;  // Guards value_ and unique_values_
   DISALLOW_COPY_AND_ASSIGN(StringGauge);
+};
+
+// Gauge implementation for mean that uses locks to ensure thread safety.
+class MeanGauge : public Gauge {
+ public:
+  explicit MeanGauge(const GaugePrototype<double>* proto)
+    : Gauge(proto),
+      total_sum_(0.0),
+      total_count_(0.0) {
+  }
+  scoped_refptr<Metric> snapshot() const override;
+  double value() const;
+  double total_count() const;
+  double total_sum() const;
+  void set_value(double total_sum, double total_count);
+  virtual bool IsUntouched() const override {
+    return false;
+  }
+  void MergeFrom(const scoped_refptr<Metric>& other) override;
+
+ protected:
+  virtual void WriteValue(JsonWriter* writer) const override;
+ private:
+  double total_sum_;
+  double total_count_;
+  mutable simple_spinlock lock_;  // Guards total_sum_ and total_count_
+  DISALLOW_COPY_AND_ASSIGN(MeanGauge);
 };
 
 // Lock-free implementation for types that are convertible to/from int64_t.
@@ -1344,6 +1379,19 @@ inline scoped_refptr<AtomicGauge<T> > MetricEntity::FindOrCreateGauge(
       FindPtrOrNull(metric_map_, proto).get());
   if (!m) {
     m = new AtomicGauge<T>(proto, initial_value);
+    InsertOrDie(&metric_map_, proto, m);
+  }
+  return m;
+}
+
+inline scoped_refptr<MeanGauge> MetricEntity::FindOrCreateMeanGauge(
+    const GaugePrototype<double>* proto) {
+  CheckInstantiation(proto);
+  std::lock_guard<simple_spinlock> l(lock_);
+  scoped_refptr<MeanGauge> m = down_cast<MeanGauge*>(
+      FindPtrOrNull(metric_map_, proto).get());
+  if (!m) {
+    m = new MeanGauge(proto);
     InsertOrDie(&metric_map_, proto, m);
   }
   return m;
